<?xml version="1.0"?>
<package format="2">
  <name>fabrics_controllers</name>
  <version>0.10.1</version>
  <description>fabrics_controllers provide a low-level usage of geometric fabrics.</description>
  <maintainer email="m.spahn@tudelft.nl">Max Spahn</maintainer>
  <license>Apache 2.0</license>

  <author>Max Spahn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>libfranka</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/fabrics_controllers_plugin.xml" />
  </export>
</package>
